<resources>
    <string name="app_name">PexelsApp</string>

    <string name="download">Download</string>
    <string name="download_started">Download started</string>
    <string name="download_failed">Download failed (%1$s)</string>

    <string name="name_surname">Name Surname</string>

    <string name="explore">Explore</string>
    <string name="img_not_found">Image not found</string>
    <string name="search">Search</string>

    <string name="bookmarks">Bookmarks</string>
    <string name="nothing_saved">You haven\'t saved anything yet</string>

    <string name="no_internet_connection">No Internet connection!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>