<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.presentation.bookmark.BookmarksFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/no_bookmarks_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/middle_dark_gray"
            android:textSize="15sp"
            android:text="@string/nothing_saved"/>

        <Button
            android:id="@+id/explore_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@color/transparent"
            android:text="@string/explore"
            android:textSize="16sp"
            android:textAllCaps="false"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:gravity="center_vertical"
        android:paddingVertical="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="21dp"
            android:background="@drawable/shape_round_rect_light_gray"
            android:src="@drawable/ic_back"
            app:tint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:textAllCaps="false"
            android:maxWidth="270dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/bookmarks"/>

    </RelativeLayout>


    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/top_bar"
        app:layout_constraintBottom_toTopOf="@id/tabs_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBarHorizontal"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:visibility="gone"
            android:layout_marginHorizontal="10dp"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_marginTop="5dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/idRVPhotos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:clipToPadding="false"
            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
            app:spanCount="2"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:listitem="@layout/rv_image_with_autor_item" />


    </LinearLayout>

    <!-- Tabs layout -->
    <LinearLayout
        android:id="@+id/tabs_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/white"
        android:elevation="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/home_tab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <View
                android:id="@+id/home_tab_indicator"
                android:layout_width="30dp"
                android:layout_height="3dp"
                android:background="@color/red"
                android:visibility="visible"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_home_inactive"
                app:tint="@color/red" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/bookmark_tab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <View
                android:id="@+id/bookmark_tab_indicator"
                android:layout_width="30dp"
                android:layout_height="3dp"
                android:background="@color/red"
                android:visibility="invisible"/>

            <ImageView

                android:layout_width="50dp"
                android:padding="10dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_bookmark_inactive"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>