<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".app.presentation.home.HomeFragment">

    <!--No internet layout-->
   <LinearLayout
       android:id="@+id/offline_layout"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       android:gravity="center"
       android:visibility="gone">

       <ImageView
           android:layout_width="80dp"
           android:layout_height="80dp"
           android:src="@drawable/ic_no_network"
           app:tint="@color/red" />

       <Button
           android:layout_width="wrap_content"
           android:layout_height="50dp"
           android:background="@color/transparent"
           android:text="Try again"
           android:textSize="17sp"
           android:textAllCaps="false"/>


   </LinearLayout>

    <!-- Not dound img -->
    <LinearLayout
        android:id="@+id/not_found_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:visibility="gone"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/middle_light_gray"
            android:textSize="15sp"
            android:text="@string/img_not_found"/>
        
        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@color/transparent"
            android:text="@string/explore"
            android:textSize="17sp"
            android:textAllCaps="false"/>

    </LinearLayout>

    <!-- Search Bar -->
    <LinearLayout
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/oval_searchbox_background"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageView
            android:id="@+id/search_ic"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_search"
             />

        <EditText
            android:id="@+id/search_bar_edit_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:inputType="text"
            android:hint="@string/search"/>

        <ImageView
            android:id="@+id/search_bar_close_ic"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_close"
            android:contentDescription="@string/search"
            android:visibility="gone"/>

    </LinearLayout>

    <!-- Photo Recycler View -->
    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/search_bar"
        app:layout_constraintBottom_toTopOf="@id/tabs_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/featured_collection_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:clipToPadding="false"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>

        <ProgressBar
            android:id="@+id/progress_bar_horizontal"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="5dp"
            style="?android:attr/progressBarStyleHorizontal"
            android:visibility="gone"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/idRVPhotos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:clipToPadding="false"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
             />

    </LinearLayout>

    <!-- Tabs layout -->
    <LinearLayout
        android:id="@+id/tabs_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/white"
        android:elevation="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/home_tab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <View
                android:id="@+id/home_tab_indicator"
                android:layout_width="30dp"
                android:layout_height="3dp"
                android:background="@color/red"
                android:visibility="visible"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_home_inactive"
                app:tint="@color/red" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/bookmark_tab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <View
                android:id="@+id/bookmark_tab_indicator"
                android:layout_width="30dp"
                android:layout_height="3dp"
                android:background="@color/red"
                android:visibility="invisible"/>

            <ImageView

                android:layout_width="50dp"
                android:padding="10dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_bookmark_inactive"/>

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>